# VietDocProof

./: .gitignore  README.md  VietDocProof_Colab.ipynb  cli.py  pyproject.toml  requirements.txt  tui.py  wizard.py
config/: default.yaml
core/: confidence.py  diff_engine.py  document_processor.py  docx_reader.py  entity_protector.py  hybrid_runner.py  model_runner.py  normalizer.py  paragraph_merger.py  reporter.py  review_tracker.py  revision_writer.py  run_mapper.py  run_preserver.py  stats.py  text_segmenter.py
docs/: USER_GUIDE.md  google_colab_guide.md
resources/: vietnamese_dict.txt
scripts/: benchmark.py  benchmark_decoding.py  evaluate_baseline.py  train_thresholds.py
tests/: test_revision_writer.py  test_segmenter.py
utils/: logging_utils.py
